# python-project-50

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gendiff/: __init__.py  app.py  cli.py  diff_tree.py  gen_diff.py  gendiff_json.py  logic.py  main.py  output.py  parser.py  tools.py
gendiff/formaters/: diff_tree_utils.py  json.py  plain.py  stylish.py
gendiff/scripts/: app.py  diff.py  gendiff.py
gendiff/static/: app.css  script.js
gendiff/templates/: index.html  result.html
gendiff/utils/: file_utils.py  mapping_utils.py
src/: cli.py  gendiff.py  main.py  output.py
src/scripts/: diff.py
tests/: test_cli.py  test_gendiff.py  test_parser.py  test_tools.py
tests/fixtures/: help.txt  nested_result  nested_result.json  plain_nested_result  plain_nested_result.txt  plain_result.txt  result.json  result.txt  result_nested.json  test.yaml
